Fix the issue where the WP adminbar overlaps the mobile menu

--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -26,6 +26,10 @@
 	margin-bottom: rem-calc(32);
 }
 
+// Fix the issue where the WP adminbar overlaps the mobile menu
+#wpadminbar {
+	position: fixed !important;
+}
 
 /**
  * 2.0 Typography
